Added plot of MAE vs Ntrain working

--- a/modelling/modelling.tex
+++ b/modelling/modelling.tex
@@ -14,7 +14,10 @@ This 3D mathematical model will be used in a nonlinear simulation of a quadrotor
 \section{States}
 \section{Forces and moments}
 \section{Lagrangian mechanics}
-\section{Linearised model} \label{sec:linear_model}
+\section{Linearised model}
+    \label{sec:linear_model}
+
 \section{Discretised model}
 \section{Model verification}
+\section{Dynamic payloads}
 
