Added  plots of MAE vs Ntrain for angle and angular rate models

--- a/system_id/plots/MAE_vs_train_Simulink.tex
+++ b/system_id/plots/MAE_vs_train_Simulink.tex
@@ -36,5 +36,5 @@
     
     \caption{Prediction MAE of system identification models for different lengths of training data with 
     $m =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{0.5}{\meter}, $T_s =$~\SI{0.03}{\second}.}
-    \label{fig:MAE_vs_train}
+    \label{fig:Simulink_MAE_vs_train}
 \end{figure}
